clusters/aks-eu-tap-8/cluster-config/namespace-provisioner/resources/gateway.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:base64", "base64")
#@ load("@ytt:json", "json")
#@ def is_equal(property, v):
#@  return hasattr(data.values, property) and ( data.values[property] == v)
#@ end
#@ if/end data.values.name.startswith("micropets"):
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: micropets-gateway-httpproxy
spec:
  virtualhost:
    fqdn: #@ "gateway-" +data.values.env + "."+data.values.tap_values.shared.ingress_domain
    tls:
      passthrough: true
  tcpproxy:
    services:
      - name: micropets-gateway
        port: 443
